# DomainGenCheck

./: .gitignore  CHANGELOG.md  INSTALL.md  LICENSE  README.md  SECURITY.md  SECURITY_ASSESSMENT.md  config.example.json  pyproject.toml  requirements-dev.txt  requirements.txt  test_domains.txt
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql-analysis.yml  dependency-review.yml
src/domaingenchecker/: __init__.py  cli.py  config.py  dns_checker.py  domain_generator.py  output_handler.py
tests/: __init__.py  test_domain_generator.py
